# near_lottery

./: API.md  Cargo.toml  README.md  TODO.org  build.sh  lottery.sh  test.sh
neardev/: dev-account
src/: big_lottery.rs  config.rs  fungible_token.rs  lib.rs  lottery.rs  lottery_config.rs  simple_lottery.rs  utils.rs  views.rs
