[package]
name = "near-lottery"
version = "0.2.0"
authors = ["Guacharo <guacharo.w3@yahoo.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
uint = { version = "=0.9.0", default-features = false }
rand = "0.7.3"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[features]
default = ["testnet"]
# Enables testnet configuration if expicitly stated.
# It makes the MotoDEX contract use a test hack for changeable token health.
testnet = []

# Enables mainnet configuration if expicitly stated.
# It makes the MotoDEX not to use hack.
mainnet = []
